test/syc/bad/incomarrel.c
/*
 * Array element has incomplete type.
 */

int a[1][];
